# PVInverterLink

./: .dockerignore  .drone.yml  .env.image-tags.example  .env.prod.example  .env.staging.example  .env.test.example  .gitignore  .gitmodules  CLAUDE.md  CODE_QUALITY_ANALYSIS.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  REFACTORING_PLAN.md  REQUIREMENTS.md  SPEC.md  TIMESCALE_MIGRATION.md  backend.env  dev.Dockerfile  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  influxdb_client  package-lock.json  package.json  pyproject.toml  renovate.json  reset_password.py  tailwind.config.js  test_dc_channels.py  test_server_measurements.py  transfer_measurements.py
.github/workflows/: docker-build-push.yml  test.yml
alembic/: env.py
alembic/versions/: 168c4e550c33_fix.py  1a89fa2e85eb_convert_dc_channel_measurements_to_.py  1d006d59a0fb_inverter_model_extended.py  5768939010d0_make_dc_channel_measurements_nullable.py  65d023027cca_initial_models.py  687924fcd12d_add_dc_channel_measurements_table.py  a0d10f46b03b_add_api_key_to_user_table.py  a9357e3d02f5_remove_legacy_tmp_pass_field_from_user_.py  b7c96dc8da99_add_time_series_table_and_remove_.py  d8f09ab046bf_add_yield_fields_to_inverter_.py  f16b15d226cd_.py  f4cbcbadddda_merge_tmp_password_removed_and_time_.py
dbus-victron-http-bridge/: README.md  VICTRON.md  config.ini.example  dbus-victron-http-bridge.py  install.sh
dbus-victron-http-bridge/service/: run
deployment/: ci.env  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml
deployment/scripts/: backup-db.sh  build-and-push.sh  deploy-prod.sh  deploy-staging.sh  deploy-test.sh  export-dev-db.sh
deployment/traefik/: traefik.yml
deployment/traefik/dynamic/: routers.yml
dev-tools/: emulate_dc_channels.py  transfer_measurements.py
docs/: CICD.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT.md  DOCKER-DEPLOYMENT-SUMMARY.md  DOCKER-REGISTRY.md  MONITORING.md  SCHEMA.md  TRANSFER_MEASUREMENTS_README.md  TROUBLESHOOTING.md
monitoring/signoz/: otel-collector-config.yaml  prometheus.yml
scripts/: deploy-prod.sh  deploy-staging.sh  deploy-test.sh  export-dev-db.sh  restore-db.sh
solar_backend/: .test.db  admin_auth.py  app.py  config.py  constants.py  db.py  helpers.py  influx.py  inverter.py  schemas.py  signup.py  test.env  users.py
solar_backend/api/: account.py  dashboard.py  dc_channels.py  export.py  healthcheck.py  inverter.py  login.py  measurements.py  signup.py  start.py  summary.py  victron.py
solar_backend/repositories/: inverter_repository.py
solar_backend/services/: exceptions.py  inverter_service.py
solar_backend/static/: output.css  style.css
solar_backend/templates/: account.jinja2  add_inverter.jinja2  base.jinja2  complete_verify.jinja2  dashboard.jinja2  dc_channels.jinja2  dev_template.py  export.jinja2  index.jinja2  inverters.jinja2  login.jinja2  new_password.jinja2  signup.jinja2  start.jinja2  summary.jinja2  test.html  test.jinja2  verify.jinja2
solar_backend/templates/email/: reset_password.html  verify_email.html
solar_backend/utils/: admin_auth.py  api_keys.py  crypto.py  email.py  helpers.py  influx.py  logging.py  query_builder.py  timeseries.py
tests/: conftest.py  factories.py  helpers.py  test.env  test_auth.py  test_authorization.py  test_dashboard.py  test_frontend.py  test_influx_connection_errors.py  test_influx_retention.py  test_inverter_api.py  test_inverter_crud.py  test_inverter_metadata.py  test_measurements_api_key.py  test_password_reset.py  test_register.py  test_startup.py  test_summary.py  test_victron_measurements.py
tests/integration/: test_concurrency.py  test_rate_limiter.py
tests/unit/: __init__.py  test_crypto.py  test_inverter_service.py  test_password_validation.py  test_query_builder.py  test_summary_helpers.py  test_timeseries.py
