[tool.poetry]
name = "solar-backend"
version = "0.1.1"
description = ""
authors = ["Bjoern Hauffe <oss@64b.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.5"
fastapi = "0.103.1"
httpx = "0.28.1"
fastapi-users = {extras = ["sqlalchemy"], version = "12.1.3"}
asyncpg = "0.30.0"
uvicorn = "0.23.2"
aiosqlite = "0.20.0"
sqladmin = "0.14.1"
itsdangerous = "2.1.2"
sqlalchemy-utils = "0.41.2"
alembic = "1.14.0"
influxdb-client = {extras = ["async"], version = "1.45.0"}
pydantic-settings = "2.0.3"
structlog = "23.1.0"
rich = "13.5.3"
fastapi-htmx = "0.2.2"
python-multipart = "0.0.7"
fastapi-mail = "1.4.1"
nest-asyncio = "1.5.8"
sqlalchemy = {extras = ["asyncio"], version = "2.0.36"}
humanize = "4.10.0"

[tool.poetry.group.dev.dependencies]
pytailwindcss = "0.2.0"
pytest = "7.4.4"
pytest-asyncio = "0.23.8"
pytest-async-sqlalchemy = "0.2.0"
faker = "19.13.0"
factory-boy = "3.3.3"
pytest-mock = "3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "unit: marks unit tests",
    "integration: marks tests as integration tests, slow tests",
    "smoke: tests if foundational errors exist",
    "unit: tests that are unit tests",
    "property_based: uses property based testing principles",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
